# MetalGrad

./: .gitignore  README.md  pyproject.toml
docs/: scope.md
scripts/: bench_ops.py  bench_scaling.py  train_tiny_demo.py
src/metalgrad/: __init__.py  differentiable.py
src/metalgrad/ops/: __init__.py  activations.py  adaln.py  attention.py  conv1d.py  conv2d.py  cross_entropy.py  depthwise_conv2d.py  group_norm.py  kl_div.py  layer_norm.py  losses_extra.py  matmul.py  mse.py  optim.py  position.py  rms_norm.py  rope.py  swiglu_ffn.py
src/metalgrad/testing/: __init__.py  gradcheck.py
tests/: test_gradcheck.py
